[gd_scene load_steps=3 format=3 uid="uid://bbebvg0rfmuux"]

[ext_resource type="Script" path="res://editor/controls/dockers/workspace_docker/c_dynamic_context_docker/dynamic_context_controls/find_atoms_by_type.gd" id="1_uh6tv"]
[ext_resource type="PackedScene" uid="uid://djdtnhc6tuvrh" path="res://editor/controls/dockers/workspace_docker/a_create_docker/controls/compact_element_picker.tscn" id="2_5wa70"]

[node name="SelectByAtomTypes" type="VBoxContainer"]
offset_left = 5.0
offset_top = 5.0
offset_right = 219.0
offset_bottom = 375.0
size_flags_vertical = 0
script = ExtResource("1_uh6tv")

[node name="Label1" type="Label" parent="."]
layout_mode = 2
text = "Elements to search"

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
theme_type_variation = &"SubcategoryPanel"

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="ElementPicker" parent="PanelContainer/VBoxContainer" instance=ExtResource("2_5wa70")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4

[node name="ElementsTree" type="Tree" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 2
hide_root = true
scroll_horizontal_enabled = false
scroll_vertical_enabled = false

[node name="Label2" type="Label" parent="."]
layout_mode = 2
text = "Found Atoms"

[node name="PanelContainer2" type="PanelContainer" parent="."]
layout_mode = 2
theme_type_variation = &"SubcategoryPanel"

[node name="GroupsTree" type="Tree" parent="PanelContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 2
hide_root = true
select_mode = 1
scroll_horizontal_enabled = false
scroll_vertical_enabled = false
